tests/core/snapshots/on-request-body-grpc.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://localhost:50051")
  @link(src: "test.js", type: Script)
  @link(id: "news", src: "news.proto", type: Protobuf) {
  query: Query
}

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type Query {
  newsById: News! @grpc(body: {id: 2}, method: "news.NewsService.GetNews", onResponseBody: "onResponse")
}
