tests/core/snapshots/on-response-body-grpc.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "newsById": {
        "id": 2,
        "title": "Note 2 - Changed by JS"
      }
    }
  }
}
