tests/core/snapshots/on-response-body-grpc.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type Query {
  newsById: News!
}

schema {
  query: Query
}
