tests/core/snapshots/query-planner-batch-key-without-list.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "id": 1,
        "name": "user-1",
        "post": {
          "id": 1,
          "title": "post-1"
        }
      }
    }
  }
}
