tests/core/snapshots/query-planner-batch-key-without-list.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 1,
          "userId": 1,
          "user": {
            "id": 1,
            "name": "user-1"
          }
        },
        {
          "id": 2,
          "userId": 2,
          "user": {
            "id": 2,
            "name": "user-2"
          }
        }
      ]
    }
  }
}
