tests/core/snapshots/query-planner-batch-key-without-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int
  title: String
  user: User
  userId: Int
}

type Query {
  posts: [Post]
  user: User
}

type User {
  id: Int
  name: String
  post: Post
}

schema {
  query: Query
}
