tests/core/snapshots/query-planning-batcher-edge-case.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000, queryValidation: false) @upstream {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
    @http(
      url: "http://jsonplaceholder.typicode.com/users"
      batchKey: ["id"]
      query: [{key: "id", value: "{{.value.userId}}"}, {key: "foo", value: "bar"}]
    )
  userId: Int
}

type PostData {
  id: Int!
  meta: String @expr(body: "Data owned by tailcall.")
  post: Post
    @http(
      url: "http://jsonplaceholder.typicode.com/nested-posts"
      batchKey: ["id"]
      query: [{key: "id", value: "{{.value.id}}"}]
    )
}

type Query {
  postData: [PostData] @http(url: "http://jsonplaceholder.typicode.com/posts?id=1&id=2")
}

type User {
  id: Int
  name: String
}
